- add def for audit fields table

--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -78,6 +78,7 @@ server alias = local host
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
+audit fields table = audit_fields
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -155,7 +156,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.7  2003-07-27 21:45:16  ncq
+# Revision 1.8  2003-08-17 00:06:36  ncq
+# - add def for audit fields table
+#
+# Revision 1.7  2003/07/27 21:45:16  ncq
 # - add gmMeasurements and gmCrossDB_FKs
 #
 # Revision 1.6  2003/05/22 12:53:41  ncq
