--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -73,6 +73,7 @@ server alias = local host
 audit marker table =
 audit trail parent table =
 audit trail table prefix =
+audit fields table =
 schema = $schema$
 $schema$
 
@@ -116,7 +117,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.1  2003-08-13 21:15:32  ncq
+# Revision 1.2  2003-08-17 00:06:37  ncq
+# - add def for audit fields table
+#
+# Revision 1.1  2003/08/13 21:15:32  ncq
 # - separate files for core functionality database and
 #   "language pack"
 #
