--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -104,6 +104,7 @@ server alias = local host
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
+audit fields table = audit_fields
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -178,7 +179,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.1  2003-08-13 21:15:32  ncq
+# Revision 1.2  2003-08-17 00:06:37  ncq
+# - add def for audit fields table
+#
+# Revision 1.1  2003/08/13 21:15:32  ncq
 # - separate files for core functionality database and
 #   "language pack"
 #
