--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.14 $
+version = $Revision: 1.15 $
 
 #----------------------------------
 [installation]
@@ -113,6 +113,7 @@ server alias = local host
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
+audit fields table = audit_fields
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -187,7 +188,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.14  2003-08-13 14:18:11  ncq
+# Revision 1.15  2003-08-17 00:06:37  ncq
+# - add def for audit fields table
+#
+# Revision 1.14  2003/08/13 14:18:11  ncq
 # - add service "reference"
 #
 # Revision 1.13  2003/08/05 09:15:23  ncq
