--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.10 $
+version = $Revision: 1.11 $
 
 #----------------------------------
 [installation]
@@ -85,6 +85,7 @@ server alias = local host
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
+audit fields table = audit_fields
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -174,7 +175,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.10  2003-08-03 14:04:10  ncq
+# Revision 1.11  2003-08-17 00:06:37  ncq
+# - add def for audit fields table
+#
+# Revision 1.10  2003/08/03 14:04:10  ncq
 # - import measurements before views now
 #
 # Revision 1.9  2003/08/02 14:33:48  ncq
