*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -1,13 +1,12 @@
 #Test Properties
-#Thu Aug 14 00:58:25 EST 2003
-notify.id.at.interval=1
-postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
-logger=on
-schema.has.been.exported=true
-stress.encounters.per.identity=10
-test.identity.addresses.number=10
-stress.identity.count=4
+#Sun Aug 17 19:44:40 EST 2003
 postcode.batch.flush.size=40
-
-#levels can be finest, finer, fine, warning, info, all
-logger.level=finest
+schema.has.been.exported=true
+session.preserved=false
+logger.level=severe
+stress.identity.count=4
+test.identity.addresses.number=10
+stress.encounters.per.identity=10
+notify.id.at.interval=1
+logger=off
+postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
