- add x_db_fk views

--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -85,6 +85,7 @@ sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
 sql/gmCrossDB_FKs.sql
+sql/gmCrossDB_FK-views.sql
 $schema$
 
 #----------------------------------
@@ -156,7 +157,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.8  2003-08-17 00:06:36  ncq
+# Revision 1.9  2003-08-17 18:06:36  ncq
+# - add x_db_fk views
+#
+# Revision 1.8  2003/08/17 00:06:36  ncq
 # - add def for audit fields table
 #
 # Revision 1.7  2003/07/27 21:45:16  ncq
