--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.15 $
+version = $Revision: 1.16 $
 
 #----------------------------------
 [installation]
@@ -120,6 +120,7 @@ sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
 sql/gmCrossDB_FKs.sql
+sql/gmCrossDB_FK-views.sql
 $schema$
 
 #----------------------------------
@@ -188,7 +189,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.15  2003-08-17 00:06:37  ncq
+# Revision 1.16  2003-08-17 18:06:36  ncq
+# - add x_db_fk views
+#
+# Revision 1.15  2003/08/17 00:06:37  ncq
 # - add def for audit fields table
 #
 # Revision 1.14  2003/08/13 14:18:11  ncq
