--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -118,6 +118,7 @@ sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
 sql/gmCrossDB_FKs.sql
+sql/gmCrossDB_FK-views.sql
 $schema$
 
 #----------------------------------
@@ -202,7 +203,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.12  2003-08-17 00:06:37  ncq
+# Revision 1.13  2003-08-17 18:06:36  ncq
+# - add x_db_fk views
+#
+# Revision 1.12  2003/08/17 00:06:37  ncq
 # - add def for audit fields table
 #
 # Revision 1.11  2003/08/03 14:04:10  ncq
