--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.11 $
+version = $Revision: 1.12 $
 
 #----------------------------------
 [installation]
@@ -92,6 +92,7 @@ sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
 sql/gmCrossDB_FKs.sql
+sql/gmCrossDB_FK-views.sql
 $schema$
 
 #----------------------------------
@@ -175,7 +176,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.11  2003-08-17 00:06:37  ncq
+# Revision 1.12  2003-08-17 18:06:36  ncq
+# - add x_db_fk views
+#
+# Revision 1.11  2003/08/17 00:06:37  ncq
 # - add def for audit fields table
 #
 # Revision 1.10  2003/08/03 14:04:10  ncq
