*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -1,4 +1,4 @@
-date_commenced_label=date commenced\n
+date_commenced_label=date commenced
 
 #for medical id numbers
 Category_label=Category & Numbers
@@ -203,3 +203,49 @@ B=B
 AB=AB
 #blood group
 O=O
+
+create_role=create role
+
+find_provider=find provider
+
+create_provider=create provider
+
+Providers=Providers
+
+specialists=specialist
+
+gps=general practitioner
+
+surgeons=surgeon
+
+physicians=physician
+
+obstetricians=obstetrician
+
+psychiatrists=psychiatrist
+
+general_surgeons=general surgeon
+
+general_physicians=general physician
+
+paediatricians=paediatrician
+
+paediatric_surgeons=paediatric surgeon
+
+orthopaedic_surgeons=orthopaedic surgeon
+
+ent_surgeons=ent surgeon
+
+plastics=plastic surgeon
+
+dermatologists=dermatologist
+
+cardiologists=cardiologist
+
+opthalmologists=opthalmologist
+
+urologists=urologist
+
+tree_command=shift left selects into the list, shift-right deletes from the list
+
+provider_tree_command=shift left selects into the list, shift-right deletes from the list
