*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -248,4 +248,17 @@ urologists=urologist
 
 tree_command=shift left selects into the list, shift-right deletes from the list
 
-provider_tree_command=shift left selects into the list, shift-right deletes from the list
+provider_tree_command=CTRL-LEFT selects as occupied role, CRL-RIGHT deletes as occupied role
+
+doctors=doctor
+
+save_provider=save provider\n
+results=results
+
+role=role
+
+location=location
+
+pager=pager
+
+fax=fax
