provider panel create and find, no add roles yet.

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -252,7 +252,7 @@ provider_tree_command=CTRL-LEFT selects as occupied role, CRL-RIGHT deletes as o
 
 doctors=doctor
 
-save_provider=save provider\n
+save_provider=save provider
 results=results
 
 role=role
@@ -262,3 +262,31 @@ location=location
 pager=pager
 
 fax=fax
+
+remove_category=remove category
+
+remove_role_hint=remove a leaf category where no provider exists.
+
+add_category=add role category
+
+add_role_category=add role category
+is_sub_role_of=is child role of
+
+#\u000A#for medical id numbers
+role_name=role name
+
+search=search
+
+lastname_firstname=last names, first names
+
+edit_selected=edit selected
+
+last_names=last names
+
+firstnames=first names
+
+telephone=telephone
+
+comments=comments
+
+occupied_roles=occupied roles
