*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -290,3 +290,11 @@ telephone=telephone
 comments=comments
 
 occupied_roles=occupied roles
+
+default=default
+
+street=street
+
+urb=urb
+
+clear=clear
