providers done; can't create roles yet; basic referral letter; can't print (need to decide which print package to use).

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -167,7 +167,7 @@ divorced=divorced
 
 widowed=widowed
 
-de\ facto=de facto
+de_facto=de facto
 
 country_of_birth=Country of Birth
 
@@ -298,3 +298,33 @@ street=street
 urb=urb
 
 clear=clear
+contacts=contacts
+
+referral_letter=referral letter
+
+documents=documents
+
+Documents=Documents
+
+editor_app=editor app
+
+set_editor=set editor
+generate_letter=generate_letter
+
+referral_helper=referral helper
+
+clear_selection=clear selection
+
+search_role=search for role
+
+select_contact=select provider
+
+neutral_greetings_format=Dear Dr. {0} {1}
+
+basic_spiel_format=thank you for seeing {0} {1} born {2} for an opinion and management.
+
+salutations=Yours sincerely
+
+letter=letter
+
+print=print
