--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -1,12 +1,12 @@
 #Test Properties
-#Tue Aug 19 00:43:25 EST 2003
+#Fri Aug 22 07:24:52 EST 2003
 postcode.batch.flush.size=40
 schema.has.been.exported=true
 session.preserved=false
-logger.level=severe
+logger.level=fine
 stress.identity.count=4
 test.identity.addresses.number=10
 stress.encounters.per.identity=10
 notify.id.at.interval=1
-logger=off
+logger=on
 postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
