basic text file printing for referral letters.

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -321,10 +321,14 @@ select_contact=select provider
 
 neutral_greetings_format=Dear Dr. {0} {1}
 
-basic_spiel_format=thank you for seeing {0} {1} born {2} for an opinion and management.
+basic_spiel_format=thank you for seeing {0} {1} born {2, date} for\nan opinion and management.
 
 salutations=Yours sincerely
 
 letter=letter
 
 print=print
+
+save=save
+
+print_error=print error
