tidying up basic non-configurable plain text letter generation.

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -309,7 +309,7 @@ Documents=Documents
 editor_app=editor app
 
 set_editor=set editor
-generate_letter=generate_letter
+generate_letter=generate letter
 
 referral_helper=referral helper
 
@@ -321,7 +321,7 @@ select_contact=select provider
 
 neutral_greetings_format=Dear Dr. {0} {1}
 
-basic_spiel_format=thank you for seeing {0} {1} born {2, date} for\nan opinion and management.
+basic_spiel_format=thank you for seeing {0} {1} born {2, date} for an opinion and management.
 
 salutations=Yours sincerely
 
