bugfixes to bootstrap scripts

--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -99,8 +99,8 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 
-port = 
+name = 127.0.0.1
+port = 5432
 template database = template1
 super user alias = postgres
 schema = $schema$
@@ -176,7 +176,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.12  2003-08-17 18:06:36  ncq
+# Revision 1.13  2003-08-26 10:52:52  ihaywood
+# bugfixes to bootstrap scripts
+#
+# Revision 1.12  2003/08/17 18:06:36  ncq
 # - add x_db_fk views
 #
 # Revision 1.11  2003/08/17 00:06:37  ncq
