- add "audit disable" flag

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -101,6 +101,7 @@ $schema$
 [database core]
 name = gnumed
 server alias = local host
+audit disable = 0
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
@@ -180,7 +181,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.3  2003-08-17 18:06:36  ncq
+# Revision 1.4  2003-08-26 13:05:04  ncq
+# - add "audit disable" flag
+#
+# Revision 1.3  2003/08/17 18:06:36  ncq
 # - add x_db_fk views
 #
 # Revision 1.2  2003/08/17 00:06:37  ncq
