--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.16 $
+version = $Revision: 1.17 $
 
 #----------------------------------
 [installation]
@@ -110,6 +110,7 @@ $schema$
 [database core]
 name = gnumed-public
 server alias = local host
+audit disable = 0
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
@@ -189,7 +190,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.16  2003-08-17 18:06:36  ncq
+# Revision 1.17  2003-08-26 13:05:04  ncq
+# - add "audit disable" flag
+#
+# Revision 1.16  2003/08/17 18:06:36  ncq
 # - add x_db_fk views
 #
 # Revision 1.15  2003/08/17 00:06:37  ncq
