--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.13 $
+version = $Revision: 1.14 $
 
 #----------------------------------
 [installation]
@@ -82,6 +82,7 @@ $schema$
 [database core]
 name = gnumed
 server alias = local host
+audit disable = 0
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
@@ -176,7 +177,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.13  2003-08-26 10:52:52  ihaywood
+# Revision 1.14  2003-08-26 13:05:04  ncq
+# - add "audit disable" flag
+#
+# Revision 1.13  2003/08/26 10:52:52  ihaywood
 # bugfixes to bootstrap scripts
 #
 # Revision 1.12  2003/08/17 18:06:36  ncq
