--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.13 $
+version = $Revision: 1.14 $
 
 #----------------------------------
 [installation]
@@ -108,6 +108,7 @@ $schema$
 [database core]
 name = gnumed-test
 server alias = local host
+audit disable = 0
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
@@ -203,7 +204,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.13  2003-08-17 18:06:36  ncq
+# Revision 1.14  2003-08-26 13:05:04  ncq
+# - add "audit disable" flag
+#
+# Revision 1.13  2003/08/17 18:06:36  ncq
 # - add x_db_fk views
 #
 # Revision 1.12  2003/08/17 00:06:37  ncq
