--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.11 $
+version = $Revision: 1.12 $
 
 #----------------------------------
 [installation]
@@ -72,6 +72,7 @@ $schema$
 [database core]
 name = gnumed-new
 server alias = local host
+audit disable = 0
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
@@ -165,7 +166,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.11  2003-08-17 18:06:36  ncq
+# Revision 1.12  2003-08-26 13:05:04  ncq
+# - add "audit disable" flag
+#
+# Revision 1.11  2003/08/17 18:06:36  ncq
 # - add x_db_fk views
 #
 # Revision 1.10  2003/08/17 00:06:37  ncq
