--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -75,6 +75,7 @@ $schema$
 [database gm-archive]
 name = gm-archive-sample
 server alias = local host
+audit disable = 0
 audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
@@ -157,7 +158,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.9  2003-08-17 18:06:36  ncq
+# Revision 1.10  2003-08-26 13:05:04  ncq
+# - add "audit disable" flag
+#
+# Revision 1.9  2003/08/17 18:06:36  ncq
 # - add x_db_fk views
 #
 # Revision 1.8  2003/08/17 00:06:36  ncq
