--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -70,10 +70,7 @@ $schema$
 [database core]
 name = gnumed
 server alias = local host
-audit marker table =
-audit trail parent table =
-audit trail table prefix =
-audit fields table =
+audit disable = 1
 schema = $schema$
 $schema$
 
@@ -117,7 +114,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.2  2003-08-17 00:06:37  ncq
+# Revision 1.3  2003-08-26 13:05:04  ncq
+# - add "audit disable" flag
+#
+# Revision 1.2  2003/08/17 00:06:37  ncq
 # - add def for audit fields table
 #
 # Revision 1.1  2003/08/13 21:15:32  ncq
