- add option to disable checking for proc lang library files on remote machines

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.17 $
+version = $Revision: 1.18 $
 
 #----------------------------------
 [installation]
@@ -130,7 +130,7 @@ name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
-
+procedural language library check = yes
 schema = $schema$
 sql/gmPublicAccounts.sql
 $schema$
@@ -179,6 +179,7 @@ $language library dirs$
 # meditate over it and enlightenment will be thyne
 [pg/SQL]
 library name = plpgsql.so
+library dir = 
 
 call handler = $call handler$
 CREATE FUNCTION plpgsql_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
@@ -190,7 +191,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.17  2003-08-26 13:05:04  ncq
+# Revision 1.18  2003-08-26 14:11:13  ncq
+# - add option to disable checking for proc lang library files on remote machines
+#
+# Revision 1.17  2003/08/26 13:05:04  ncq
 # - add "audit disable" flag
 #
 # Revision 1.16  2003/08/17 18:06:36  ncq
