--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.14 $
+version = $Revision: 1.15 $
 
 #----------------------------------
 [installation]
@@ -130,6 +130,7 @@ name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
+procedural language library check = yes
 schema = $schema$
 sql/gmTestAccounts.sql
 $schema$
@@ -181,6 +182,7 @@ $language library dirs$
 #----------------------------------
 [pg/SQL]
 library name = plpgsql.so
+library dir = 
 
 call handler = $call handler$
 CREATE FUNCTION plpgsql_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
@@ -193,6 +195,7 @@ $language activation$
 
 [pg/Python]
 library name = plpython.so
+library dir = 
 
 call handler = $call handler$
 CREATE FUNCTION plpython_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
@@ -204,7 +207,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.14  2003-08-26 13:05:04  ncq
+# Revision 1.15  2003-08-26 14:11:13  ncq
+# - add option to disable checking for proc lang library files on remote machines
+#
+# Revision 1.14  2003/08/26 13:05:04  ncq
 # - add "audit disable" flag
 #
 # Revision 1.13  2003/08/17 18:06:36  ncq
