--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -94,6 +94,7 @@ name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
+procedural language library check = yes
 schema = $schema$
 $schema$
 
@@ -143,6 +144,7 @@ $language library dirs$
 #----------------------------------
 [pg/SQL]
 library name = plpgsql.so
+library dir = 
 
 call handler = $call handler$
 CREATE FUNCTION plpgsql_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
@@ -155,6 +157,7 @@ $language activation$
 #----------------------------------
 [pg/Python]
 library name = plpython.so
+library dir = 
 
 call handler = $call handler$
 CREATE FUNCTION plpython_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
@@ -166,7 +169,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.12  2003-08-26 13:05:04  ncq
+# Revision 1.13  2003-08-26 14:11:13  ncq
+# - add option to disable checking for proc lang library files on remote machines
+#
+# Revision 1.12  2003/08/26 13:05:04  ncq
 # - add "audit disable" flag
 #
 # Revision 1.11  2003/08/17 18:06:36  ncq
