--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.10 $
+version = $Revision: 1.11 $
 
 #----------------------------------
 [installation]
@@ -97,6 +97,7 @@ name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
+procedural language library check = yes
 schema = $schema$
 gmArchiveAccounts.sql
 $schema$
@@ -147,6 +148,7 @@ $language library dirs$
 #----------------------------------
 [pg/SQL]
 library name = plpgsql.so
+library dir = 
 
 call handler = $call handler$
 CREATE FUNCTION plpgsql_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
@@ -158,7 +160,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.10  2003-08-26 13:05:04  ncq
+# Revision 1.11  2003-08-26 14:11:13  ncq
+# - add option to disable checking for proc lang library files on remote machines
+#
+# Revision 1.10  2003/08/26 13:05:04  ncq
 # - add "audit disable" flag
 #
 # Revision 1.9  2003/08/17 18:06:36  ncq
