--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -82,6 +82,7 @@ name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
+procedural language library check = yes
 schema = $schema$
 $schema$
 
@@ -114,7 +115,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.3  2003-08-26 13:05:04  ncq
+# Revision 1.4  2003-08-26 14:11:13  ncq
+# - add option to disable checking for proc lang library files on remote machines
+#
+# Revision 1.3  2003/08/26 13:05:04  ncq
 # - add "audit disable" flag
 #
 # Revision 1.2  2003/08/17 00:06:37  ncq
