--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -121,7 +121,7 @@ name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
-
+procedural language library check = yes
 schema = $schema$
 sql/gmTestAccounts.sql
 $schema$
@@ -170,6 +170,7 @@ $language library dirs$
 # meditate over it and enlightenment will be thyne
 [pg/SQL]
 library name = plpgsql.so
+library dir = 
 
 call handler = $call handler$
 CREATE FUNCTION plpgsql_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
@@ -181,7 +182,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.4  2003-08-26 13:05:04  ncq
+# Revision 1.5  2003-08-26 14:11:13  ncq
+# - add option to disable checking for proc lang library files on remote machines
+#
+# Revision 1.4  2003/08/26 13:05:04  ncq
 # - add "audit disable" flag
 #
 # Revision 1.3  2003/08/17 18:06:36  ncq
