basic script printing in test form.

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -336,3 +336,9 @@ print_error=print error
 Save=Save
 
 Close=close
+
+prescriber_no=prescriber number
+
+provider_no=provider number
+
+repeats=repeats
