print script  preview per patient identity; set provider identity through provider browser in referral , until login done.

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -342,3 +342,14 @@ prescriber_no=prescriber number
 provider_no=provider number
 
 repeats=repeats
+
+add=add
+
+delete=delete
+
+print_script=print script
+user=null
+
+set_current_user=set current user
+
+print_preview=Print Preview
