script printing on printer; temporary worker thread fix-up for slow retrieve from non-lazy loading of identity objects when searching for patients.

--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -4,9 +4,9 @@ postcode.batch.flush.size=40
 schema.has.been.exported=true
 session.preserved=false
 logger.level=info
-stress.identity.count=4
+stress.identity.count=4000
 test.identity.addresses.number=10
-stress.encounters.per.identity=10
+stress.encounters.per.identity=20
 notify.id.at.interval=1
-logger=off
+logger=on
 postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
