*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -355,3 +355,8 @@ set_current_user=set current user
 print_preview=Print Preview
 
 leftMargin=left margin
+
+max_chars_across=maximum chars across
+
+default_urb_name=Melbourne
+
