recursive find for non-leaf role for providers; delete providers.

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -360,3 +360,7 @@ max_chars_across=maximum chars across
 
 default_urb_name=Melbourne
 
+
+confirm_delete=Are you sure you wish to delete this?
+
+operation_cancelled=operation cancelled
