- remove now-obsolete audit_mark defines

--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.11 $
+version = $Revision: 1.12 $
 
 #----------------------------------
 [installation]
@@ -76,7 +76,6 @@ $schema$
 name = gm-archive-sample
 server alias = local host
 audit disable = 0
-audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
 audit fields table = audit_fields
@@ -160,7 +159,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.11  2003-08-26 14:11:13  ncq
+# Revision 1.12  2003-10-01 15:59:20  ncq
+# - remove now-obsolete audit_mark defines
+#
+# Revision 1.11  2003/08/26 14:11:13  ncq
 # - add option to disable checking for proc lang library files on remote machines
 #
 # Revision 1.10  2003/08/26 13:05:04  ncq
