--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -100,7 +100,6 @@ $schema$
 [database core]
 name = gnumed-knoppix
 server alias = local host
-audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
 schema = $schema$
@@ -177,7 +176,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.4  2003-08-03 14:04:10  ncq
+# Revision 1.5  2003-10-01 15:59:20  ncq
+# - remove now-obsolete audit_mark defines
+#
+# Revision 1.4  2003/08/03 14:04:10  ncq
 # - import measurements before views now
 #
 # Revision 1.3  2003/08/02 14:33:48  ncq
