--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -102,7 +102,6 @@ $schema$
 name = gnumed
 server alias = local host
 audit disable = 0
-audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
 audit fields table = audit_fields
@@ -182,7 +181,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.5  2003-08-26 14:11:13  ncq
+# Revision 1.6  2003-10-01 15:59:20  ncq
+# - remove now-obsolete audit_mark defines
+#
+# Revision 1.5  2003/08/26 14:11:13  ncq
 # - add option to disable checking for proc lang library files on remote machines
 #
 # Revision 1.4  2003/08/26 13:05:04  ncq
