--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.18 $
+version = $Revision: 1.19 $
 
 #----------------------------------
 [installation]
@@ -111,7 +111,6 @@ $schema$
 name = gnumed-public
 server alias = local host
 audit disable = 0
-audit marker table = audit_mark
 audit trail parent table = audit_trail
 audit trail table prefix = log_
 audit fields table = audit_fields
@@ -191,7 +190,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.18  2003-08-26 14:11:13  ncq
+# Revision 1.19  2003-10-01 15:59:20  ncq
+# - remove now-obsolete audit_mark defines
+#
+# Revision 1.18  2003/08/26 14:11:13  ncq
 # - add option to disable checking for proc lang library files on remote machines
 #
 # Revision 1.17  2003/08/26 13:05:04  ncq
