--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -52,6 +52,7 @@ registration database = core
 schema = $schema$
 sql/country.specific/de/gmClinical.de.sql
 sql/country.specific/de/gmClinical-Data.de.sql
+sql/country.specific/de/STIKO-Impfkalender.sql
 $schema$
 
 [service documents-de]
@@ -71,6 +72,8 @@ $schema$
 name = gnumed
 server alias = local host
 audit disable = 1
+scoring table prefix = score_
+scoring fields table = scoring_fields
 schema = $schema$
 $schema$
 
@@ -115,7 +118,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.4  2003-08-26 14:11:13  ncq
+# Revision 1.5  2003-10-19 12:28:26  ncq
+# - add STIKO Impfkalender and scoring defs
+#
+# Revision 1.4  2003/08/26 14:11:13  ncq
 # - add option to disable checking for proc lang library files on remote machines
 #
 # Revision 1.3  2003/08/26 13:05:04  ncq
